--- a/package.json
+++ b/package.json
@@ -13,12 +13,18 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.3.6",
-    "express": "^4.17.1",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "express-validator": "^6.13.0",
     "gravatar": "^1.8.2",
     "jsonwebtoken": "^8.5.1",
+    "md5": "^2.3.0",
     "mongoose": "^6.0.11",
-    "request": "^2.88.2"
+    "multer": "^1.4.5-lts.1",
+    "node-jose": "^2.1.1",
+    "request": "^2.88.2",
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
